Implement OpenSearch - CLM-35734 (#14374)